[package]
name = "cumulus-client-network"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Cumulus-specific networking protocol"
edition = "2018"

[dependencies]
# Substrate deps
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "statemint" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "statemint" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "statemint" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "statemint" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "statemint" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "statemint" }

# Polkadot deps
polkadot-primitives = { git = "https://github.com/paritytech/polkadot", branch = "statemint" }
polkadot-statement-table = { git = "https://github.com/paritytech/polkadot", branch = "statemint" }
polkadot-node-primitives = { git = "https://github.com/paritytech/polkadot", branch = "statemint" }
polkadot-service = { git = "https://github.com/paritytech/polkadot", branch = "statemint" }
polkadot-parachain = { git = "https://github.com/paritytech/polkadot", branch = "statemint" }

# other deps
codec = { package = "parity-scale-codec", version = "2.0.0", features = [ "derive" ] }
futures = { version = "0.3.1", features = ["compat"] }
futures-timer = "3.0.2"
tracing = "0.1.22"
parking_lot = "0.10.2"
derive_more = "0.99.2"

[dev-dependencies]
tokio = { version = "0.2.21", features = ["macros"] }

# Cumulus deps
cumulus-test-service = { path = "../../test/service" }
cumulus-primitives-core = { path = "../../primitives/core" }

# Polkadot deps
polkadot-test-client = { git = "https://github.com/paritytech/polkadot", branch = "statemint" }

# substrate deps
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "statemint" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "statemint" }
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "statemint" }
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "statemint" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "statemint" }
sc-cli = { git = "https://github.com/paritytech/substrate", branch = "statemint" }
substrate-test-utils = { git = "https://github.com/paritytech/substrate", branch = "statemint" }
sc-service = { git = "https://github.com/paritytech/substrate", branch = "statemint" }
