[package]
name = "cumulus-client-service"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
# Cumulus dependencies
cumulus-client-consensus-common = { path = "../consensus/common" }
cumulus-client-collator = { path = "../collator" }
cumulus-primitives-core = { path = "../../primitives/core" }

# Substrate dependencies
sc-chain-spec = { git = "https://github.com/paritytech/substrate", branch = "statemint" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "statemint" }
sc-service = { git = "https://github.com/paritytech/substrate", branch = "statemint" }
sc-telemetry = { git = "https://github.com/paritytech/substrate", branch = "statemint" }
sc-tracing = { git = "https://github.com/paritytech/substrate", branch = "statemint" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "statemint" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "statemint" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "statemint" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "statemint" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "statemint" }

# Polkadot dependencies
polkadot-primitives = { git = "https://github.com/paritytech/polkadot", branch = "statemint" }
polkadot-service = { git = "https://github.com/paritytech/polkadot", branch = "statemint" }

# Other deps
futures = "0.3.6"
tracing = "0.1.22"
codec = { package = "parity-scale-codec", version = "2.0.0" }
