[package]
name = "cumulus-test-client"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
sc-service = { git = "https://github.com/paritytech/substrate", branch = "statemint" }
sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "statemint" }
sc-block-builder = { git = "https://github.com/paritytech/substrate", branch = "statemint" }
substrate-test-client = { git = "https://github.com/paritytech/substrate", branch = "statemint" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "statemint" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "statemint" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "statemint" }
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "statemint" }
sp-test-primitives = { git = "https://github.com/paritytech/substrate", branch = "statemint" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "statemint" }
sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "statemint" }
sp-timestamp = { git = "https://github.com/paritytech/substrate", branch = "statemint" }
sp-state-machine = { git = "https://github.com/paritytech/substrate", branch = "statemint" }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "statemint" }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", branch = "statemint" }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "statemint" }

# Cumulus deps
cumulus-test-runtime = { path = "../runtime" }
cumulus-test-service = { path = "../service" }
cumulus-test-relay-sproof-builder = { path = "../relay-sproof-builder" }
cumulus-primitives-core = { path = "../../primitives/core" }
cumulus-primitives-parachain-inherent = { path = "../../primitives/parachain-inherent" }

# Polkadot deps
polkadot-primitives = { git = "https://github.com/paritytech/polkadot", branch = "statemint" }

# Other deps
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = [ "derive" ] }
