[package]
name = "cumulus-test-runtime"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.101", optional = true, features = ["derive"] }

# Substrate dependencies
frame-executive = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "statemint" }
frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "statemint" }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "statemint" }
pallet-balances = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "statemint" }
pallet-randomness-collective-flip = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "statemint" }
pallet-sudo = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "statemint" }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "statemint" }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "statemint" }
sp-api = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "statemint" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "statemint" }
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "statemint" }
sp-inherents = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "statemint" }
sp-io = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "statemint" }
sp-offchain = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "statemint" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "statemint" }
sp-session = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "statemint" }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "statemint" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "statemint" }
sp-version = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "statemint" }

# Cumulus dependencies
cumulus-pallet-parachain-system = { path = "../../pallets/parachain-system", default-features = false }
cumulus-primitives-core = { path = "../../primitives/core", default-features = false }

# Polkadot dependencies
polkadot-parachain = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "statemint" }

[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/paritytech/substrate", branch = "statemint" }

[features]
default = [ "std" ]
std = [
	"codec/std",
	"cumulus-pallet-parachain-system/std",
	"cumulus-primitives-core/std",
	"frame-executive/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-balances/std",
	"pallet-randomness-collective-flip/std",
	"pallet-sudo/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment/std",
	"serde",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-io/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",
]
upgrade = []
