[package]
name = "cumulus-client-consensus-aura"
description = "AURA consensus algorithm for parachains"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
# Substrate dependencies
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "statemint" }
sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "statemint" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "statemint" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "statemint" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "statemint" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "statemint" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "statemint" }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate", branch = "statemint" }
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "statemint" }
sp-application-crypto = { git = "https://github.com/paritytech/substrate", branch = "statemint" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "statemint" }
sc-consensus-aura = { git = "https://github.com/paritytech/substrate", branch = "statemint" }
sc-consensus-slots = { git = "https://github.com/paritytech/substrate", branch = "statemint" }
sc-telemetry = { git = "https://github.com/paritytech/substrate", branch = "statemint" }
substrate-prometheus-endpoint = { git = "https://github.com/paritytech/substrate", branch = "statemint" }

# Polkadot dependencies
polkadot-service = { git = "https://github.com/paritytech/polkadot", branch = "statemint" }

# Cumulus dependencies
cumulus-client-consensus-common = { path = "../common" }
cumulus-primitives-core = { path = "../../../primitives/core" }

# Other deps
futures = { version = "0.3.8", features = ["compat"] }
codec = { package = "parity-scale-codec", version = "2.0.0", features = [ "derive" ] }
tracing = "0.1.22"
async-trait = "0.1.42"
parking_lot = "0.9"
